--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
                 "src/css/themes/sanityinc-tomorrow-bright.scss",
                 "src/css/themes/sanityinc-tomorrow-eighties.scss",
                 "src/css/themes/material.scss",
-                "src/css/themes/base16-apathy.scss"
+                "src/css/themes/base16-apathy.scss",
+                "src/css/themes/whiteboard.scss",
+                "src/css/themes/standard-light.scss",
+                "src/css/themes/standard-dark.scss"
             ]
         }
     },
