ef-autumn theme

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
                 "src/css/themes/standard-dark.scss",
                 "src/css/themes/ef-deuteranopia-light.scss",
                 "src/css/themes/ef-cyprus.scss",
-                "src/css/themes/ef-elea-dark.scss"
+                "src/css/themes/ef-elea-dark.scss",
+                "src/css/themes/ef-autumn.scss"
             ]
         }
     },
