--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
                 "src/css/themes/ef-elea-dark.scss",
                 "src/css/themes/ef-autumn.scss",
                 "src/css/themes/ef-maris-light.scss",
-                "src/css/themes/ef-maris-dark.scss"
+                "src/css/themes/ef-maris-dark.scss",
+                "src/css/themes/ef-duo-light.scss",
+                "src/css/themes/ef-duo-dark.scss"
             ]
         }
     },
