themes: bring back bold and add ef-spring

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"src/css/themes/ef-dream.scss",
 		"src/css/themes/ef-bio.scss",
 		"src/css/themes/ef-eagle.scss",
-		"src/css/themes/ef-frost.scss"
+		"src/css/themes/ef-frost.scss",
+		"src/css/themes/ef-spring.scss"
 	    ]
 	}
     },
